# hackathon2024

./: Dockerfile.bak  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.txt
app/: data_base.csv  db_helper.py  main.py
app/models/: object_helper.py
chroma_db/: chroma.sqlite3
chromadb/0e0e1e8c-dbe2-4133-84d2-84c2906cd08e/: index_metadata.pickle
chromadb/9c889222-2bae-4ff0-9d12-c109ee302571/: index_metadata.pickle
