[tool.poetry]
name = "tampa-hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
uvicorn = "^0.27.1"
chromadb = "^0.4.23"
pandas = "^2.2.1"
google-cloud-aiplatform = "^1.42.1"
langchain-google-vertexai = "^0.0.5"
langchain = "^0.1.9"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
